--- a/.github/workflows/ssa3.yml
+++ b/.github/workflows/ssa3.yml
@@ -45,38 +45,20 @@ jobs:
             }
           }')
 
-      - name: Create Step for Deployment 1
-        id: step-1-create
-        run: |
-          step_id="step-1-deployment-1-${{ github.run_id }}"
-          response=$(curl -s -L -X POST "https://api.getport.io/v1/blueprints/step/entities" \
-          -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
-          -H "Content-Type: application/json" \
-          -d '{
-            "identifier": "'${step_id}'",
-            "title": "Step 1 for Deployment 1",
-            "blueprint": "step",
-            "properties": {
-              "status": "IN_PROGRESS",
-              "status_message": "Step 1 is in progress."
-            },
-            "relations": {
-              "deployment": "deployment-1-${{ github.run_id }}"
-            }
-          }')
-          echo "STEP_ID=$step_id" >> $GITHUB_ENV
-
-      - name: Run SSA for Step 1
+      - name: Run SSA to Create Step for Deployment 1
         id: run-step-1
         run: |
           response=$(curl -s -L -X POST "https://api.getport.io/v1/actions/step_log_stream/runs" \
           -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
           -H "Content-Type: application/json" \
-          -d '{ "properties": {}, "entity": "${{ env.STEP_ID }}" }')
+          -d '{
+            "properties": {},
+            "entity": "deployment-1-${{ github.run_id }}"
+          }')
           run_id=$(echo "$response" | jq -r '.run.id')
           echo "RUN_ID_STEP_1=$run_id" >> $GITHUB_ENV
 
-      - name: Log Step 1 Execution
+      - name: Log Step Execution to SSA Run
         run: |
           curl -L -X POST "https://api.getport.io/v1/actions/runs/${{ env.RUN_ID_STEP_1 }}/logs" \
           -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
@@ -84,7 +66,7 @@ jobs:
           -d '{
             "terminationStatus": "SUCCESS",
             "statusLabel": "Completed",
-            "message": "Step 1 for Deployment 1 completed successfully."
+            "message": "Step for Deployment 1 created successfully via SSA."
           }'
 
   update-workflow:
