--- a/.github/workflows/ssa3.yml
+++ b/.github/workflows/ssa3.yml
@@ -52,11 +52,16 @@ jobs:
           -H "Authorization: Bearer ${{ env.ACCESS_TOKEN }}" \
           -H "Content-Type: application/json" \
           -d '{
-            "properties": {},
-            "entity": "deployment-1-${{ github.run_id }}"
+            "properties": {"step_identifier": "test",
+            "step_title": "test",
+            "status": "IN_PROGRESS",
+            "status_message": "IN_PROGRESS",
+            "deployment": "deployment-1-${{ github.run_id }}"}}'
           }')
           run_id=$(echo "$response" | jq -r '.run.id')
           echo "RUN_ID_STEP_1=$run_id" >> $GITHUB_ENV
+
+  
 
       - name: Log Step Execution to SSA Run
         run: |
