--- a/.github/workflows/ssa3.yml
+++ b/.github/workflows/ssa3.yml
@@ -72,7 +72,7 @@ jobs:
             -d '{
               "properties": {
                 "status": "COMPLETED",
-                "log_stream": "https://app.getport.io/organization/run?runId=${run_id}", 
+                "log_stream": "https://app.getport.io/organization/run?runId='${run_id}'", 
                 "status_message": "Step '${i}' completed successfully."
               }
             }'
@@ -143,7 +143,7 @@ jobs:
           -d '{
             "properties": {
               "status": "FAILED",
-              "log_stream": "https://app.getport.io/organization/run?runId=${run_id}",
+              "log_stream": "https://app.getport.io/organization/run?runId='${run_id}'",
               "status_message": "Step failed due to an error."
             }
           }'
